// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextComponent should handle input 1`] = `
<div
  id="root2"
  ng-version="5.2.4"
>
  <input
    class="form-control ng-untouched ng-valid ng-dirty"
    ng-reflect-is-disabled="false"
    ng-reflect-model=""
    type="text"
  />
  

</div>
`;

exports[`TextComponent should handle losing focus 1`] = `
<div
  id="root1"
  ng-version="5.2.4"
>
  <input
    class="form-control ng-pristine ng-valid ng-touched"
    ng-reflect-is-disabled="false"
    type="text"
  />
  

</div>
`;

exports[`TextComponent should render 1`] = `
<div
  id="root0"
  ng-version="5.2.4"
>
  <input
    class="form-control ng-untouched ng-pristine ng-valid"
    ng-reflect-is-disabled="false"
    type="text"
  />
  

</div>
`;
